# midterms-project-oop

./: CMakeLists.txt  README.md  input.h  inventory.h  inventory_ui.h  main.cpp  ui.h
submenu_ui/: add_item_ui.h  display_items.h  low_stock_items.h  remove_item.h  search_item.h  update_item.h
